@@ -3,7 +3,7 @@
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2003       David N. Welton <davidw@dedasys.com>.
-//  Copyright (C) 2003-2015  The Bochs Project
+//  Copyright (C) 2003-2018  The Bochs Project
 //
 //  This library is free software; you can redistribute it and/or
 //  modify it under the terms of the GNU Lesser General Public
@@ -41,8 +41,12 @@ public:
 
     void beep_on(float frequency);
     void beep_off();
+    void set_line(bx_bool level);
 #if BX_SUPPORT_SOUNDLOW
     Bit32u beep_generator(Bit16u rate, Bit8u *buffer, Bit32u len);
+#if BX_HAVE_REALTIME_USEC
+    Bit32u dsp_generator(Bit16u rate, Bit8u *buffer, Bit32u len);
+#endif
 #endif
 private:
     float beep_frequency;  // 0 : beep is off
@@ -58,6 +62,13 @@ private:
   bx_soundlow_waveout_c *waveout;
   int beep_callback_id;
   bx_bool beep_active;
+#if BX_HAVE_REALTIME_USEC
+  bx_bool dsp_active;
+  Bit64u dsp_start_usec;
+  Bit64u dsp_cb_usec;
+  Bit32u dsp_count;
+  Bit64u dsp_event_buffer[500];
+#endif
 #endif
 };
 
